# IX

./: .gitmodules  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: install-smoke-wsl.yml  install-smoke.yml
EPA's code/: README.md
HSDM/: Actual_exp_Data_Provided_1.xlsx  Actual_exp_Data_Provided_2.xlsx  Actual_exp_Data_Provided_3.xlsx  HSDMIX.py  HSDM_fitting-Copy1.py  HSDM_fitting.py
PSDM/: PSDM.py  PSDM_K_value.py  experimental_1_PSDM.xlsx  experimental_2_PSDM.xlsx  experimental_3_PSDM.xlsx  experimental_4_PSDM.xlsx  inverse_PSDM.py
Thomas/: data_cleaned.xlsx  kTh_prediction.py  normalize_breakthrough.py  plot_normalized.py  thomas_fitting.py
Water_Treatment_Models/IonExchangeModel/: setup.py
Water_Treatment_Models/PSDM/: pyproject.toml
Water_Treatment_Models/PSDM/psdm/: PSDM_functions.py  __init__.py
data_in/: Actual_exp_Data_Provided_4.xlsx  AdDesignS_input.txt  Data_files_reader.py  PFAS_properties.xlsx  PFBA_K25_SPDFR15.txt  PFOA_K25_SPDFR15.txt  breakthrough_data.xlsx  column_parameters.xlsx  experimental_5_PSDM.xlsx  experimental_6_PSDM.xlsx  ~$experimental_6_PSDM.xlsx
fits/: HSDM_fitting.py  inverse_PSDM_class.py  kTh_prediction.py  thomas_fitting.py
tests/: test_install_smoke.py
