[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSDM-models"
version = "0.1.0"
description = "Pore and Surface Diffusion Models"
readme = "Readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "Jonathan Burkhardt" },
	{ name = "Levi Haupert" },
	{ name = "Boris Datsov" }
]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering"
]
dependencies = [
	"matplotlib",
	"numpy",
	"pandas",
	"scipy",
	"openpyxl",
	"xlsxwriter",
	"ixpy"
]

[tool.setuptools]
packages = ["PSDM"]

[tool.setuptools.package-dir]
PSDM = "psdm"
